apps/youtubedl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: youtubedl
spec:
  selector:
    app: youtubedl
  ports:
    - protocol: TCP
      port: 80
      targetPort: 17442
  type: ClusterIP
